2023-11-02  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2023-11-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.56

2023-09-24  Morten Welinder  <terra@gnome.org>

	* src/dependent.h (GnmDependentClass): Add q_array_context since
	certain graph deps are computed in array context.

	* src/dependent.c (dependent_link): Observe q_array_context.
	(link_unlink_expr_dep): Don't clear array context for operators.

2023-02-02  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2023-02-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.55

2023-01-19  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2023-01-19  Morten Welinder <terra@gnome.org>

	* Release 1.12.54

2023-01-15  Morten Welinder  <terra@gnome.org>

	* src/sheet-object.c (sheet_objects_clear): Freeze the object
	views, just in case there are a lot of objects to clear.

	* src/gnm-pane.c (cb_pane_init_objs): Freeze panes while creating
	views -- there might be a lot.

2022-12-01  Morten Welinder  <terra@gnome.org>

	* src/value.c (value_get_as_gstring): When rendering shortest,
	round halfways away-from-zero, not to-even.

	* src/complex.c (gnm_complex_to_string): Round
	away-away-from-zero.

2022-10-29  Morten Welinder  <terra@gnome.org>

	* src/sheet-conditions.c (update_group): Fix problem during sheet
	finalize.

	* src/sheet.c (sheet_destroy_contents): Set cell_hash to NULL
	after we free it for easier debug.

2022-10-08  Morten Welinder  <terra@gnome.org>

	* src/libgnumeric.c (gnm_pre_parse_init): Use basename of argv[0],
	except when help is requested.  See #677 for details.

2022-09-17  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2022-09-17  Morten Welinder <terra@gnome.org>

	* Release 1.12.53

2022-08-29  Morten Welinder  <terra@gnome.org>

	* src/value.c (value_new_float): Avoid -0.

2022-08-24  Morten Welinder  <terra@gnome.org>
